--- a/app/views/web/ost/index/_popcorn_signup.erb
+++ b/app/views/web/ost/index/_popcorn_signup.erb
@@ -1,9 +1,9 @@
 <section class="container-fluid container-pop-corn">
 
-  <div class="row justify-content-center py-6" style="background-color: rgba(0, 0, 0, 0.15);">
+  <div class="row justify-content-center py-6 bg-opacity">
     <div class="container">
-      <h3 class="text-center" style="color: #fff">OST Wallet App</h3>
-      <p class="text-center" style="color: #fff;text-shadow: 1px 1px 1px #000;font-size: 18px">We have built  a sample app to showcase what's possible with OST Platform.</p>
+      <h3 class="text-center">OST Wallet App</h3>
+      <p class="text-center">We have built  a sample app to showcase what's possible with OST Platform.</p>
       <div class="row justify-content-center col-12 col-md-10 col-lg-8 col-xl-6 mx-auto ">
         <form class="ost-form w-100" id="home-subscribe-form">
           <div class="input-group mb-2">
