conflicts between show-dont-tell-v2 and latest-transactions-fixes

--- a/app/assets/stylesheets/web/ost-index.css
+++ b/app/assets/stylesheets/web/ost-index.css
@@ -1,5 +1,6 @@
 /*
  *= require web/ost/index/Jumbotron
+ *= require web/ost/index/Prototypes
  *= require web/ost/index/LatestTransactions
  *= require web/ost/index/PopCorn
  //*= require web/ost/index/Subscribe
