--- a/app/views/web/ost/index/_blockchain_bits.erb
+++ b/app/views/web/ost/index/_blockchain_bits.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid container-partnering-ost py-6">
+<section class="container-fluid container-partnering-ost my-6">
 
   <div class="row">
     <div class="container">
