--- a/app/views/web/ost/index/_prototype.erb
+++ b/app/views/web/ost/index/_prototype.erb
@@ -1,4 +1,4 @@
-<section class="prototypes-section py-4 position-relative mx-auto d-none d-lg-block mt-6" >
+<section class="prototypes-section my-6 position-relative mx-auto d-none d-lg-block">
 
   <div class="container-fluid">
     <div id="prototypes-carousal">
