--- a/app/views/web/ost/index/_prototype_mobile.erb
+++ b/app/views/web/ost/index/_prototype_mobile.erb
@@ -1,4 +1,4 @@
-<div id="scrollSnap" class="d-block d-lg-none prototypes-section-mobile">
+<section id="scrollSnap" class="d-block d-lg-none prototypes-section-mobile">
   <div class="snap-container">
     <ul class="pl-0 prototype-list ">
     <li style="background-color: white; display: none" class="edge-element-first m-2 mt-4">
@@ -26,4 +26,4 @@
     <button id="view-more-prototypes" class="btn btn-primary mx-auto ">View more</button>
   </div>
 
-</div>
+</section>
