--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -138,9 +138,8 @@
 
       </ul>
 
-      <div class="d-none d-lg-inline ml-auto" style="font-size: 0">
-        <a href="" class="btn btn-primary my-2 my-md-3 px-3 py-2" title="Schedule a demo">Schedule a demo</a>
-        <a href="" class="btn btn-secondary my-2 my-md-3 px-3 py-2 ml-lg-3" title="Register">Register</a>
+      <div class="d-none d-md-inline ml-auto" style="font-size: 0">
+        <a href="" class="btn btn-secondary my-2 my-md-3 px-3 py-2 ml-lg-3" title="Contact an Expert">Contact an Expert</a>
       </div>
 
 <!--      <div class="d-none d-md-inline ml-auto" style="font-size: 0">-->
