Features page UI

--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -17,7 +17,7 @@
           <a href="<%= GlobalConstant::Base.root_url %>solutions" class="main-nav-item" title="Solutions">Solutions</a>
         </li>
         <li>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="main-nav-item" title="Features">Features</a>
+          <a href="<%= GlobalConstant::Base.root_url %>features" class="main-nav-item" title="Features">Features</a>
         </li>
 
         <li><a href="javascript:void(0)" class="main-nav-item">Resources
