--- a/app/views/web/ost/index/_popcorn_signup.erb
+++ b/app/views/web/ost/index/_popcorn_signup.erb
@@ -6,7 +6,7 @@
       <p class="text-center">We have built  a sample app to showcase what's possible with OST Platform.</p>
       <div class="row justify-content-center col-12 col-md-10 col-lg-8 col-xl-6 mx-auto ">
         <form class="ost-form w-100" id="home-subscribe-form">
-          <div class="input-group mb-2">
+          <div class="input-group">
             <input type="email" class="form-control home-subscribe-form py-2" autocomplete="off" name="email" id="home-subscribe-form-email" placeholder="Enter email address" >
             <button class="btn btn-primary input-group-append px-3 align-items-center d-none d-md-block text-uppercase home-subscribe-form-submit"
                     type="submit" title="TRY NOW"
@@ -15,13 +15,12 @@
               Get OST Wallet
             </button>
           </div>
-          <div class="error email-error"></div>
           <div class="form-group m-0 mx-auto checkbox-section mt-1" style="display : none ; ">
             <label for="subscribe_confirmation" class="label-cbx mb-0 w-100">
               <div>
                 <input id="subscribe_confirmation" type="checkbox" name="subscribe_confirmation" value="1">
                 <div class="checkbox">
-                  <svg width="18px" height="18px" viewBox="0 0 20 20">
+                  <svg width="18" height="18" viewBox="0 0 20 20">
                     <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
                     <polyline points="4 11 8 15 16 6"></polyline>
                   </svg>
@@ -33,6 +32,7 @@
             </label>
             <div class="error confirmation_error" data-for="subscribe_confirmation"></div>
           </div>
+          <div class="error email-error"></div>
           <button class="btn btn-primary input-group-append px-3 mx-auto align-items-center d-md-none mt-3 rounded text-uppercase home-subscribe-form-submit" type="submit" title="TRY NOW" data-jsonp="<%= GlobalConstant::Email.subscribe_url %>">
             Get OST Wallet
           </button>
