border radius for different devices

--- a/app/assets/stylesheets/web/ost/index/PopCorn.scss
+++ b/app/assets/stylesheets/web/ost/index/PopCorn.scss
@@ -38,6 +38,11 @@
   }
 
   .home-subscribe-form{
+    border-radius: 0.25rem!important;
+    @media (min-width: map-get($grid-breakpoints, "md") ){
+      border-top-right-radius: 0!important;
+      border-bottom-right-radius: 0!important;
+    }
     &:focus{
       box-shadow: none;
     }
