--- a/app/views/web/ost/index/_prototype.erb
+++ b/app/views/web/ost/index/_prototype.erb
@@ -3,13 +3,13 @@
   <div class="container-fluid">
     <div id="prototypes-carousal">
       <div class="iframe-wrapper position-relative">
-        <img class="iframe-cover-img" data-name="spoon" src="https://dummyimage.com/416x875/000/fff" />
+        <img class="iframe-cover-img" data-name="spoon" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/Spoon.png" />
       </div>
       <div class="iframe-wrapper position-relative">
-        <img class="iframe-cover-img" data-name="hornet" src="https://dummyimage.com/416x875/000/fff" />
+        <img class="iframe-cover-img" data-name="hornet" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/Hornet.png" />
       </div>
       <div class="iframe-wrapper position-relative">
-        <img class="iframe-cover-img" data-name="tolkin" src="https://dummyimage.com/416x875/000/fff" />
+        <img class="iframe-cover-img" data-name="tolkin" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/Tolkin.png" />
       </div>
 
     </div>
