--- a/app/views/web/ost/index/_prototype_mobile.erb
+++ b/app/views/web/ost/index/_prototype_mobile.erb
@@ -1,21 +1,21 @@
-<section id="scrollSnap" class="d-block d-lg-none prototypes-section-mobile">
+<section id="scrollSnap" class="d-block d-lg-none prototypes-section-mobile mt-6">
   <div class="snap-container">
     <ul class="pl-0 prototype-list ">
     <li style="background-color: white; display: none" class="edge-element-first m-2 mt-4">
       <div class="proto-wrapper position-relative mx-auto py-3">
-        <img class="iframe-cover-img" data-name="spoon" src="https://dummyimage.com/416x875/000/fff" />
+        <img class="iframe-cover-img" data-name="spoon" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/Spoon.png" />
       </div>
 
     </li>
     <li style="background-color: white ; display: none" class="m-2 mt-4">
       <div class="proto-wrapper position-relative mx-auto py-3">
-        <img class="iframe-cover-img" data-name="hornet" src="https://dummyimage.com/416x875/000/fff" />
+        <img class="iframe-cover-img" data-name="hornet" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/Hornet.png" />
       </div>
 
     </li>
     <li style="background-color:white; display: none " class="m-2 mt-4">
       <div class="proto-wrapper position-relative mx-auto py-3">
-        <img class="iframe-cover-img" data-name="tolkin" src="https://dummyimage.com/416x875/000/fff" />
+        <img class="iframe-cover-img" data-name="tolkin" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/Tolkin.png" />
       </div>
 
     </li>
