--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -32,7 +32,11 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .container-jumbotron{
-
+  @media (min-width: map-get($grid-breakpoints, "lg")){
+    &.side-by-side-1-wrapper{
+      overflow: hidden;
+    }
+  }
   .header-title{
     letter-spacing: 0.5px;
     //text-transform: uppercase;
