ost features page UI

--- a/app/assets/stylesheets/web/ost-solutions.css
+++ b/app/assets/stylesheets/web/ost-solutions.css
@@ -1,7 +1,6 @@
 /*
- *= require web/solutions/jumbotron
- *= require web/solutions/solutionSideBySide
- *= require web/solutions/blockchainInfrastructure
- *= require web/solutions/poweredByOst
-
- */
+ *= require web/solutions/Jumbotron
+ *= require web/solutions/SolutionSideBySide
+ *= require web/solutions/BlockChainInfraStructure
+ *= require web/solutions/PoweredByOst
+*/
