--- a/app/views/web/ost/features/_blockchain_infrastructure.erb
+++ b/app/views/web/ost/features/_blockchain_infrastructure.erb
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-6">
-          <h1>Blockchain Technology</h1>
+          <h1>Built for Scale at Low Costs</h1>
           <p>OST is designed for internet-grade transaction volumes and speeds. OST leads development of the OpenST Protocol for launching Branded Token economies for mainstream businesses and OpenST Mosaic, a scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at low cost.</p>
           <div class="my-4">
             <a href="https://github.com/OpenST" class="btn btn-primary my-2 my-md-3" title="GITHUB" target="_blank">GITHUB</a>
@@ -34,10 +34,9 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-open-st-logo"></use>
                   </switch>
                 </svg>
-                <h5>Brand Token Protocol</h5>
+                <h5>Brand Tokens Protocol</h5>
               </div>
-              <p>OpenST Protocol enables the creation of ERC20 Tokens as stored value on auxiliary blockchains with the value of those tokens backed by staked crypto assets on Ethereum. It also provides the organizational tools to enable only users within your ecosystem to utilize your token, providing real business solutions in line with international compliance. OpenST also enables easy account recovery beyond the 12 words that you are accustomed to.
-              </p>
+              <p>The OpenST Protocol enables the creation of Brand Tokens as stored value on auxiliary blockchains with the value of those tokens backed by staked cryptoassets on Ethereum.</p>
             </div>
             <div>
               <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link text-link" target="_blank" title="WHITE PAPER">
@@ -70,7 +69,7 @@
                 </svg>
                 <h5>Scalability Protocol</h5>
               </div>
-              <p>Mosaic Protocol introduces the concept of meta-blockchains to enable internet-grade transaction throughput on Ethereum. Your transactions run at lightning speed on auxiliary blockchains with economic finality secured asynchronously on Ethereum. In this way our scaling solution can finalize thousands of transactions per second asynchronously on Ethereum at low cost.</p>
+              <p>OpenST Mosaic introduces metablockchains to enable internet-grade transaction throughput on Ethereum. Your transactions run at lightning speed on auxiliary blockchains with economic finality secured asynchronously on Ethereum.</p>
             </div>
             <div>
               <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link text-link" target="_blank" title="WHITE PAPER">
