--- a/app/views/web/ost/features/_solutions_side_by_side_1.erb
+++ b/app/views/web/ost/features/_solutions_side_by_side_1.erb
@@ -1,10 +1,35 @@
 <section class="container-fluid side-by-side">
+
+  <div class="row">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
+      <polygon points="0,100 100,0 100,100" fill="#35445b" stroke="#35445b"></polygon>
+    </svg>
+  </div>
+
+  <div class="row align-items-center py-5 midnight-blue">
+    <div class="col-12 col-md-6 col-lg-5 col-xl-4 mx-auto">
+      <div class="copy">
+        <h5 class="mb-3">Design Your Brand Token</h5>
+        <p>OST Platform provides easy to use management dashboards for token economy setup. Mint your tokens first in Sandbox mode to quickly explore, learn, and test.</p>
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>sign-up" class="text-link" title="Get Started">Get Started</a>
+      </div>
+    </div>
+    <div class="col-12 col-md-6 pr-0 mt-5 mt-md-0">
+      <img class="img-fluid responsively-lazy"
+           src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-hp-token-setup-4@2x.png"
+           data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-hp-token-setup-4@2x.png"
+           srcset="<%= GlobalConstant::Base.placeholder_image_src %>"
+           alt="OST - Design Your Brand Token"
+        />
+    </div>
+  </div>
+
   <div class="row align-items-center py-5">
 
     <div class="col-12 col-md-6 col-lg-5 col-xl-4 mx-auto order-md-2">
       <div class="copy mr-auto">
-        <h5 class="mb-3">Easy Integration</h5>
-        <p class="mb-0">We have worked from day 1 together with our clients to build a set of resources to allow you to integrate our solution into your application in the easiest and fastest way, without having to touch or understand blockchain technology. OST work as a bridge between web3 and web2.</p>
+        <h5 class="mb-3">Integrate Easily into Any App</h5>
+        <p class="mb-0">Use our robust RESTful APIs and SDKs to integrate your Brand Token into your applications with ease while observing the highest security standards. OST Platform makes it simple to test and deploy your brand currency without requiring in-house blockchain developers.</p>
       </div>
     </div>
 
@@ -18,7 +43,9 @@
     </div>
 
   </div>
+
 </section>
+
 <section class="container container-managedash-elements">
   <div class="row container-powered-containers">
     <div class="col col-lg-11 mx-md-auto">
@@ -32,12 +59,12 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
                   </switch>
                 </svg>
-                <h5 class="d-inline-block ml-1 mb-0">Robust APIs & SDKs</h5>
+                <h5 class="d-inline-block ml-1 mb-0">DOCs</h5>
               </div>
-              <p class="my-2">We provide you with extensive and detailed API and SDK documentation and Step by Step guides, supporting popular coding languages on both the Server Side and Mobile Wallet (Client) side,and enriched with multiple examples.</p>
+              <p class="my-2">Follow our Developer Guides and documentation to learn best practices for Brand Token integration and security.</p>
             </div>
             <div>
-              <a href="#" class="text-link" target="_blank" title="Read More">Read More</a>
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link" target="_blank" title="Read More">Read More</a>
             </div>
           </div>
         </div>
@@ -50,12 +77,12 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-sdk"></use>
                   </switch>
                 </svg>
-                <h5 class="d-inline-block ml-1 mb-0">Demo App & UI Screens via SDK</h5>
+                <h5 class="d-inline-block ml-1 mb-0">SDKs</h5>
               </div>
-              <p class="my-2">In order to understand the logic behind the workflows that regulate the functioning of the crypto wallet, we have spent extensive time building Demo Apps, Examples, and material to save you time and resources during the integration. The extra mile: we provide you with customizable screens that you can call directly through the SDK cutting development and design time.</p>
+              <p class="my-2">OST Platform includes SDKs for Ruby, JavaScript, PHP, Java, iOS and Android. Use the OST Wallet SDK to add full functionality for your Brand Token into your native apps while adhering to the high security standards.</p>
             </div>
             <div>
-              <a href="#" class="text-link" target="_blank" title="Read More">Read More</a>
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk/getting-started/" class="text-link" target="_blank" title="Read More">Read More</a>
             </div>
           </div>
         </div>
@@ -68,16 +95,65 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-apis"></use>
                   </switch>
                 </svg>
-                <h5 class="d-inline-block ml-1 mb-0">Webhooks</h5>
+                <h5 class="d-inline-block ml-1 mb-0">APIs</h5>
               </div>
-              <p class="my-2">The blockchain world is full of of asynchronous events, for this reason one of our priorities is to provide you with webhooks in order to manage events without overloading your system with API calls.</p>
+              <p class="my-2">Our RESTful APIs help you easily set up users and transactions, and easily integrate your token economy into your existing apps, without requiring any blockchain coding expertise.</p>
             </div>
             <div>
-              <a href="#" class="text-link" target="_blank" title="Read More">Read More</a>
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/api/#introduction" class="text-link" target="_blank" title="Read More">Read More</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</section>
+
+<section class="container-fluid side-by-side">
+
+  <div class="row">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
+      <polygon points="0,0 100,100 0,100" fill="#438BAD" stroke="#438BAD"></polygon>
+    </svg>
+  </div>
+
+  <div class="row align-items-center py-5 denim-blue">
+    <div class="col-12 col-md-6 col-lg-5 col-xl-4 mx-auto">
+      <div class="copy">
+        <h5 class="mb-3">Analyze & Iterate</h5>
+        <p>OST Platform Analytics provide detailed insights into your brand token economy, enabling you to learn and adjust as you innovate.</p>
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>sign-up" class="text-link cyan" title="Try It Now">Try It Now</a>
+      </div>
+    </div>
+    <div class="col-12 col-md-6 pr-0 mt-5 mt-md-0">
+      <img class="img-fluid responsively-lazy"
+           src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-hp-dashboard-1@2x.png"
+           data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-hp-dashboard-1@2x.png"
+           srcset="<%= GlobalConstant::Base.placeholder_image_src %>"
+           alt="OST - Analyze & Iterate"
+        />
+    </div>
+  </div>
+
+  <div class="row align-items-center py-5">
+
+    <div class="col-12 col-md-6 col-lg-5 col-xl-4 mx-auto order-md-2">
+      <div class="copy mr-auto">
+        <h5 class="mb-3">Connect to the OST Network</h5>
+        <p>The future of brand loyalty is open, transparent, and interconnected. OST Platform enables you to choose from a wide range of places for your users to redeem their tokens. OST also enables you to earn fees on every redemption.</p>
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>sign-up" class="text-link" title="Join Ost Network">Join Ost Network</a>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 order-md-1 pl-0 mt-5 mt-md-0">
+      <img class="img-fluid responsively-lazy"
+           src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-hp-redemptions-3@2x.png"
+           data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-hp-redemptions-3@2x.png"
+           srcset="<%= GlobalConstant::Base.placeholder_image_src %>"
+           alt="OST - Connect to the OST Network"
+        />
+    </div>
+
+  </div>
+
 </section>
