--- a/app/assets/stylesheets/web/ost-features.css
+++ b/app/assets/stylesheets/web/ost-features.css
@@ -1,7 +1,7 @@
 /*
- *= require web/solutions/jumbotron
- *= require web/solutions/solutionSideBySide
- *= require web/solutions/blockchainInfrastructure
- *= require web/solutions/poweredByOst
-
+ *= require web/solutions/Jumbotron
+ *= require web/solutions/SolutionSideBySide
+ *= require web/solutions/BlockChainInfraStructure
+ *= require web/solutions/PoweredByOst
+ *= require web/solutions/Subscribe
  */
