--- a/app/views/web/ost/features/_complaince_safety.erb
+++ b/app/views/web/ost/features/_complaince_safety.erb
@@ -1,80 +1,40 @@
-<section class="container-fluid side-by-side">
-  <div class="row align-items-center py-5">
-
-    <div class="col-12 col-md-6 col-lg-5 col-xl-4 mx-auto order-md-2">
-      <div class="copy mr-auto">
-        <h5 class="mb-3">Compliant and Safe</h5>
-        <p class="mb-0">We have spent the last three years with our legal teams in jurisdictions worldwide to ensure that the technology we provide is compliant with regulation and is the highest standard of security, ensuring its readiness for upcoming legislations.</p>
-      </div>
-    </div>
-
-    <div class="col-12 col-md-6 order-md-1 pl-0 mt-5 mt-md-0">
-      <img class="img-fluid responsively-lazy"
-           src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-hp-integrate-easily-3@2x.png"
-           data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-hp-integrate-easily-3@2x.png"
-           srcset="<%= GlobalConstant::Base.placeholder_image_src %>"
-           alt="OST - Integrate Easily into Any App"
-        />
-    </div>
-
-  </div>
-</section>
-<section class="container container-managedash-elements">
-  <div class="row container-powered-containers">
-    <div class="col col-lg-11 mx-md-auto">
+<section class="container container-subscribe py-5" id="subscribe">
+  <div class="row text-center">
+    <div class="col-12 col-sm-9 col-lg-7 mx-auto">
       <div class="row">
-        <div class="col-sm-12 col-md-4 d-flex my-3 my-md-5">
-          <div class=" rounded p-4 d-flex flex-column">
-            <div style="flex: 1 1 auto">
-              <div class="align-items-center d-flex">
-                <svg width="28" height="28">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
-                  </switch>
-                </svg>
-                <h5 class="d-inline-block ml-1 mb-0">Compliance</h5>
+        <div class="col-12">
+          <div class="container-subscribe">
+            <h2 class="font-weight-normal">Sign Up for Updates</h2>
+            <form class="simpletoken-form" id="subscribe-form">
+              <div class="subscribe">
+                <div class="form-group mb-0">
+                  <input type="email" class="form-control mt-4" id="subscribe-form-email" name="email" placeholder="email@example.com">
+                  <div class="error email-error">&nbsp;</div>
+                  <div class="form-group m-0 mx-auto">
+                    <label for="subscribe_confirmation" class="label-cbx mb-0 w-100 text-left">
+                      <div>
+                        <input id="subscribe_confirmation" type="checkbox" name="subscribe_confirmation" value="1">
+                        <div class="checkbox">
+                          <svg width="18px" height="18px" viewBox="0 0 20 20">
+                            <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
+                            <polyline points="4 11 8 15 16 6"></polyline>
+                          </svg>
+                        </div>
+                      </div>
+                      <span class="font-weight-normal info-text ost-nav-link">
+                        I agree to receive the OST email newsletter with updates on OST products and services from
+                        <a href="<%= GlobalConstant::Base.root_url %>">OST.COM Inc.</a></span>
+                    </label>
+                    <div class="confirmation_error error" data-for="subscribe_confirmation"></div>
+                  </div>
+                  <button type="submit" title="Sign Up" class="btn btn-primary px-5" id="subscribe-form-submit" data-jsonp="<%= GlobalConstant::PepoCampaign.subscribe_url %>">Sign up</button>
+                  <div class="general_error error"></div>
+                </div>
               </div>
-              <p class="my-2">Thank to the OpenST protocol and its settings, we are able to classify your token on layer 2 as utility token so they are not touched by security legislation risks. This, in turn means that they are classified as rewards points, so your users can buy tokens inside your app to enable the earn and spend cycles and redeems for gift cards as well as other  controlled KYC/AML methods.</p>
-            </div>
-            <div>
-              <a href="#" class="text-link" target="_blank" title="Read More">Read More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-4 d-flex my-3 my-md-5">
-          <div class=" rounded p-4 d-flex flex-column">
-            <div style="flex: 1 1 auto">
-              <div class="align-items-center d-flex">
-                <svg width="28" height="28">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-sdk"></use>
-                  </switch>
-                </svg>
-                <h5 class="d-inline-block ml-1 mb-0">Security</h5>
-              </div>
-              <p class="my-2">We involve world renown security firms which support and work with us for the creation of our protocols. They are involved in every step of the process during our development cycles through workshops and security audits that are ensuring the highest possible grade of security.
-              </p>
-            </div>
-            <div>
-              <a href="#" class="text-link" target="_blank" title="Read More">Read More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-4 d-flex my-3 my-md-5">
-          <div class=" rounded p-4 d-flex flex-column">
-            <div style="flex: 1 1 auto">
-              <div class="align-items-center d-flex">
-                <svg width="28" height="28">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-apis"></use>
-                  </switch>
-                </svg>
-                <h5 class="d-inline-block ml-1 mb-0">Non Custodial</h5>
-              </div>
-              <p class="my-2">Our Wallet solution is fully blockchain based, and while it enables innovative recovery methods to provide seamless UX, it is also completely non custodial. This makes you compliant with future regulations as the funds sit with the users.</p>
-            </div>
-            <div>
-              <a href="#" class="text-link" target="_blank" title="Read More">Read More</a>
+            </form>
+            <div id="subscribe-success" style="display: none">
+              <span class="small-title">Almost done</span>
+              <span class="small-desc">To confirm your email address, please click the link in the email we just sent you.</span>
             </div>
           </div>
         </div>
