ipad overflow fix

--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -3,7 +3,7 @@
   if ost_home_page_jumbotron.present?
 %>
 
-<section class="container-jumbotron position-relative side-by-side-1-wrapper">
+<section class="container-jumbotron position-relative">
 
   <div class="container content-z-index">
 
