--- a/app/assets/stylesheets/web/ost/index/Subscribe.scss
+++ b/app/assets/stylesheets/web/ost/index/Subscribe.scss
@@ -54,6 +54,8 @@
         position: absolute;
         top: -2px;
         left: -2px;
+        outline: 2px solid #438bad;
+        outline-offset: -2px;
         path {
           stroke: #438bad;
         }
