applying properties values from variables

--- a/app/assets/stylesheets/web/ost_theme/variables.scss
+++ b/app/assets/stylesheets/web/ost_theme/variables.scss
@@ -309,6 +309,7 @@ $font-weight-100:             100 !default;  //customized
 $font-weight-200:             200 !default;  //customized
 $font-weight-500:             500 !default;  //customized
 $font-weight-600:             600 !default;  //customized
+$font-weight-700:             700 !default;  //customized
 
 $font-weight-base:            $font-weight-light !default;
 $line-height-base:            1.5 !default;
