--- a/app/assets/stylesheets/web/solutions/Subscribe.scss
+++ b/app/assets/stylesheets/web/solutions/Subscribe.scss
@@ -1,10 +1,13 @@
+// Import theme variables
+@import "../ost_theme/variables";
+
 .container-subscribe {
   h2{
-    color: #438bad;
+    color: $cyan;
   }
   .error{
     min-height: 25px;
-    font-weight: 300;
+    font-weight: $font-weight-light;
     font-size: 14px;
     color: red;
   }
@@ -18,7 +21,7 @@
         border-color: #CDD7DA;
         vertical-align: top;
         &:focus{
-          border-color: #5a768c;
+          border-color: $green-500;
           box-shadow: none;
           -webkit-box-shadow: none;
         }
@@ -29,16 +32,16 @@
         top: 0;
         left: 0;
         svg{
-          outline: 2px solid #438bad;
+          outline: 2px solid $cyan;
           outline-offset: -2px;
         }
       }
       input:checked{
         & + .checkbox{
-          border-color: #438bad;
+          border-color: $cyan;
           svg{
             path{
-              fill: #438bad;
+              fill: $cyan;
             }
             polyline{
               stroke-dashoffset: 0;
@@ -51,11 +54,11 @@
 
   .ost-nav-link {
     font-size: 12px;
-    color: #597a84;
+    color: $blue-800;
     a{
-      color: #597a84;
+      color: $blue-800;
       &:hover, &:active,  &:focus{
-        color: #c0993a;
+        color: $yellow-500;
         text-decoration: none;
       }
     }
@@ -65,22 +68,22 @@
 
 #subscribe-success{
   text-align: center;
-  background: #438bad;
+  background: $cyan;
   border-radius: 10px;
   padding: 10px 15px 25px 10px;
   margin: 30px auto 0;
   .small-title{
-    color: #fff;
+    color: $white;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: $font-weight-600;
     letter-spacing: 3px;
     margin-top: 20px;
     margin-bottom: 5px;
     display: block;
   }
   .small-desc{
-    color: #fff;
-    font-weight: 300;
+    color: $white;
+    font-weight: $font-weight-light;
     font-size: 16px;
     display: block;
   }
