JS for Pop Corn SingUp and solutions Page UI

--- a/app/assets/stylesheets/web/ost/solutions/SolutionSideBySide.scss
+++ b/app/assets/stylesheets/web/ost/solutions/SolutionSideBySide.scss
@@ -1,5 +1,5 @@
 // Import theme variables
-@import "../ost_theme/variables";
+@import "../../ost_theme/variables";
 
 .side-by-side{
   .midnight-blue{
