--- a/app/views/web/ost/features/_signup.erb
+++ b/app/views/web/ost/features/_signup.erb
@@ -9,7 +9,7 @@
               <div class="subscribe">
                 <div class="form-group mb-0">
                   <input type="email" class="form-control mt-4" id="subscribe-form-email" name="email" placeholder="email@example.com">
-                  <div class="error email-error">&nbsp;</div>
+                  <div class="error email-error text-center text-md-left">&nbsp;</div>
                   <div class="form-group m-0 mx-auto">
                     <label for="subscribe_confirmation" class="label-cbx mb-0 w-100 text-left">
                       <div>
