--- a/app/views/web/ost/index/_popcorn_signup.erb
+++ b/app/views/web/ost/index/_popcorn_signup.erb
@@ -47,7 +47,7 @@
                 </use>
               </switch>
             </svg>
-            <span class="small-desc d-inline align-middle">Success! Please check your email for further details.</span>
+            <span class="small-desc d-inline align-middle success-msg">Success! Please check your email for further details.</span>
           </div>
           <div class="error general_error"></div>
 
