--- a/app/assets/stylesheets/web/ost/index/PopCorn.scss
+++ b/app/assets/stylesheets/web/ost/index/PopCorn.scss
@@ -69,6 +69,16 @@
     text-shadow: 1px 1px 1px $black;
   }
 
+  .success-msg{
+    color: $banana;
+    text-shadow: 1px 1px 1px $black;
+  }
+
+  #submitting-email-state{
+    color: $banana;
+    text-shadow: 1px 1px 1px $black;
+  }
+
 }
 
 
