--- a/app/assets/stylesheets/web/ost/solutions/BlockChainInfraStructure.scss
+++ b/app/assets/stylesheets/web/ost/solutions/BlockChainInfraStructure.scss
@@ -1,5 +1,5 @@
 // Import theme variables
-@import "../ost_theme/variables";
+@import "../../ost_theme/variables";
 
 .block-container {
   background-color: $blue-900;
