--- a/app/assets/stylesheets/web/ost/solutions/Subscribe.scss
+++ b/app/assets/stylesheets/web/ost/solutions/Subscribe.scss
@@ -1,5 +1,5 @@
 // Import theme variables
-@import "../ost_theme/variables";
+@import "../../ost_theme/variables";
 
 .container-subscribe {
   h2{
@@ -70,7 +70,7 @@
   text-align: center;
   background: $cyan;
   border-radius: 10px;
-  padding: 10px 15px 25px 10px;
+  padding: 30px 20px;
   margin: 30px auto 0;
   .small-title{
     color: $white;
