fix for safari - pepo hand image

--- a/app/views/web/ost/index/_pepo.erb
+++ b/app/views/web/ost/index/_pepo.erb
@@ -17,8 +17,8 @@
             </a>
           </div>
         </div>
-        <div class="col-12 col-md-6 justify-content-end d-flex pt-6">
-          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/device-hand-image.png" class="img-fluid" width="336"/>
+        <div class="col-12 col-md-6 pt-6">
+          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/device-hand-image.png" class="img-fluid d-flex ml-auto" width="336"/>
         </div>
       </div>
     </div>
