compressed images for the better page load

--- a/app/views/web/ost/index/_pepo.erb
+++ b/app/views/web/ost/index/_pepo.erb
@@ -6,19 +6,19 @@
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-12 col-md-6 d-flex align-items-center flex-column pt-6 pt-lg-0 pb-0 pb-md-6 pb-lg-0">
-          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/pepo-hp-logo.png" alt="Pepo Logo" class="img-fluid mb-3" width="211">
+          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/pepo-hp-logo-v1.png" alt="Pepo Logo" class="img-fluid mb-3" width="211">
           <p class="text-center pt-3 pb-4" style="color: #fff;font-size: 18px">OST Technology fuels the best best crypto experience ever made. The Pepo App is live on Mainnet. Try it Now.</p>
           <div class="">
             <a href="javascript:void(0)" target="_blank" title="Download Pepo App - iOS" class="d-block d-lg-inline-block">
-              <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/app-store.png" alt="App Store" class="img-fluid" width="175"/>
+              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/app-store-v1.png" alt="App Store" class="img-fluid" width="175"/>
             </a>
             <a href="javascript:void(0)" target="_blank" title="Download Pepo App - Android" class="ml-lg-3 mt-4 mt-lg-0 d-block d-lg-inline-block">
-              <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/google-play.png" alt="Google Play" class="img-fluid" width="175"/>
+              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/google-play-v1.png" alt="Google Play" class="img-fluid" width="175"/>
             </a>
           </div>
         </div>
         <div class="col-12 col-md-6 pt-6">
-          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/device-hand-image.png" class="img-fluid d-flex ml-auto" width="336"/>
+          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/device-hand-image-v1.png" class="img-fluid d-flex ml-auto" width="336"/>
         </div>
       </div>
     </div>
